welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:19: error: Unmatched closing brace '}' ignored here
}
^